import React from 'react';
import Enzyme, { mount, shallow } from 'enzyme';
import Adapter from '@wojtekmaj/enzyme-adapter-react-17';
import toJson from 'enzyme-to-json';
import { axe, toHaveNoViolations } from 'jest-axe';

import XUIEditableTableFoot from '../XUIEditableTableFoot';
import XUIEditableTableRow from '../XUIEditableTableRow';

Enzyme.configure({ adapter: new Adapter() });
expect.extend(toHaveNoViolations);

describe('<XUIEditableTableFoot />', () => {
  it('renders correctly', () => {
    const wrapper = shallow(
      <XUIEditableTableFoot>
        <div>XUIEditableTableFoot</div>
      </XUIEditableTableFoot>,
    );
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('composes the className correctly', () => {
    const wrapper = shallow(<XUIEditableTableFoot className="test-classname" />);
    expect(toJson(wrapper)).toMatchSnapshot();
  });

  it('adds footer-row class to an included row', () => {
    const wrapper = shallow(
      <XUIEditableTableFoot>
        <XUIEditableTableRow></XUIEditableTableRow>
      </XUIEditableTableFoot>,
    );

    expect(wrapper.find('.xui-editabletablerow-footer')).toBeTruthy();
  });

  it('should pass accessibility testing', async () => {
    const wrapper = mount(
      <table>
        <XUIEditableTableFoot />
      </table>,
    );
    const results = await axe(wrapper.html());
    expect(results).toHaveNoViolations();
  });
});
