// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIEditableTableFoot /> composes the className correctly 1`] = `
<tfoot
  className="xui-editabletablefoot test-classname"
>
  <ContextProvider
    value={true}
  />
</tfoot>
`;

exports[`<XUIEditableTableFoot /> renders correctly 1`] = `
<tfoot
  className="xui-editabletablefoot"
>
  <ContextProvider
    value={true}
  >
    <div>
      XUIEditableTableFoot
    </div>
  </ContextProvider>
</tfoot>
`;
